--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,6 +87,14 @@
                     android:layout_marginTop="16dp"
                     android:text="@string/action_save_creds"
                     android:textStyle="bold"/>
+            <TextView
+                    android:text="@string/res_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/logsTitle"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/logsBox" tools:text="@string/res_empty"/>
 
         </LinearLayout>
     </ScrollView>
